image stretch fix

--- a/css/service-queries.css
+++ b/css/service-queries.css
@@ -24,6 +24,7 @@
 	.services img {
 		width: 48%;
 		height: auto;
+		align-self: start;
 	}
 }
 
